--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "lib": "./lib"
   },
   "dependencies": {
+    "querystring": "^0.2.0",
     "request": "^2.88.2",
     "timetrickle": "~0.1.1",
     "xml2js": "0.1.x"
   },
   "devDependencies": {
-    "mocha": "~1.15.1",
-    "chai": "~1.8.1"
+    "chai": "~1.8.1",
+    "mocha": "^8.1.1"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha"
